# PA-FlightControl-ExtCtl

./: CMakeLists.txt  Makefile
Tools/: rpi_install.sh
msg/: CMakeLists.txt  main_state.msg  nav_state.msg
msg/templates/uorb/: msg.c.template  msg.h.template
msg/tools/: px_generate_uorb_topic_files.py
notebook/: RamFS.sh
notebook/temp/: example_airline.c  example_airline.h  extctl_airline.h
src/lib/airline/: CMakeLists.txt  airline.c  airline.h  examples.c  examples.h
src/lib/geo/: CMakeLists.txt  geo.c  geo.h
src/lib/hrt/: CMakeLists.txt  hrt.c  hrt.h
src/lib/param/: CMakeLists.txt  param.c  param.h
src/main/: CMakeLists.txt  main.c  main.h
src/modules/commander/: CMakeLists.txt  cmd_status_machine.c  cmd_status_machine.h  commander.c  commander.h  status_machine.c  status_machine.h
src/modules/extctl/: CMakeLists.txt  example_airline.c  example_airline.h  extctl_airline.c  extctl_cmd.c  extctl_cmd.h  extctl_main.c  extctl_main.h  extctl_pos.c  extctl_pos.h  extctl_protocol.c  extctl_protocol.h  extctl_rc.c  extctl_rc.h  extctl_socket.c  extctl_socket.h  extctl_sp.c  extctl_sp.h  extctl_status.c  extctl_status.h  extctl_typedef.h
src/modules/navigator/: CMakeLists.txt  nav_block_failoff.c  nav_block_failoff.h  nav_block_failsafe.c  nav_block_failsafe.h  nav_block_init.c  nav_block_init.h  nav_block_loiter.c  nav_block_loiter.h  nav_block_mission.c  nav_block_mission.h  nav_block_reached.c  nav_block_reached.h  nav_block_rtl.c  nav_block_rtl.h  nav_block_takeoff.c  nav_block_takeoff.h  nav_status_machine.c  nav_status_machine.h  navigator.c  navigator.h
src/modules/navigator/examples/: nav_block_exam01.c  nav_block_exam01.h
src/modules/orb/: CMakeLists.txt  orb_manager.c  orb_manager.h  orb_typedef.h
src/modules/orb/uORB/topics/: survey_information.cpp  survey_information.h  vehicle_pos.cpp  vehicle_pos.h  vehicle_sp.cpp  vehicle_sp.h
src/modules/uORB/: CMakeLists.txt  orb_manager.c  orb_manager.h  orb_typedef.h  uORB.h
testcode/: Makefile  example_airline.c  example_airline.h  extctl_airline.c  extctl_airline.h  extctl_cmd.c  extctl_cmd.h  extctl_land.c  extctl_land.h  extctl_main.c  extctl_main.h  extctl_pos.c  extctl_protocol.c  extctl_socket.c  extctl_socket.h  extctl_sp.c  extctl_sp.h  extctl_status.h  extctl_typedef.h  extern_control.c  extern_control.h  extern_control2.c  extern_control3.c  geo.c  geo.h  getch.c  getch.h  test.sh
